static/css/home.css
h2 {
    font-size: 3rem;
    text-align: center;
}

/* BODY CONTENT STYLES */
.beginning {
    background-color: var(--BackgroundL);
    display: flex;
    flex-direction: column;
}

.asha-container {
    margin-left: auto;
    margin-right: auto;
    padding: 60px 35px;
}

/* HOME SECTION */
#home {
    grid-template-columns: 500px 1fr;
}

#home_title {
    font-size: min(10rem, 18vw);
    grid-column: span 2;   
    justify-self: center;
}

.large-title {
    font-size: 10vh;
    margin:20px;
    font-weight: 200;
}

/* ABOUT SECTION */

#about {
    color: var(--Light);
    background-color: var(--BackgroundD);
    min-height: 890px;
}

#about-content {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    z-index: +1;
    position: relative;
}

#about h2 {
    text-align: center;
    padding-top: var(--lgPad);
}

.about-text, #about-image {
    display: inline-block;
}

#skills-container {
    width: 100%;
}

.about-text {
    width: 66%;
    min-width: 600px;
    flex: 1;
    padding: 40px;
    border-radius: var(--borderRadius);
    align-self: start;
}

#image-blob {
    display: grid;
    align-items: center;
    align-self: start;
    width: 28%;
}

#about-image {
    grid-row: 1;
    grid-column: 1;
    width: 70%;
    z-index: +1;
    justify-self: center;
}

#pink-blob {
    grid-row: 1;
    grid-column: 1;
    width: 100%;
}

#about-image p {
    margin: 0px;
}

#about-image img {
    margin: 0px;
}

#headshot {
    object-fit: cover;
    border-radius: 50%;
}

.center-align {
    text-align: center;
}

#skills-header {
    text-align: center;
    font-size: 1.3rem;
}

#about-skills {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    gap: 0px var(--lgPad);
}

.skill-div {
    height: fit-content;
    text-align: center;
    max-width: 100px;
}

#skill-name {
    font-size: 1rem;
}

.skill-images {
    font-size: 3.5rem;
    color: var(--LAccent);
    background-color: var(--BackgroundD);
    border-radius: 50%;
}

#about-wave {
    position: absolute;
    left: 0px;
    top: 90vh;
    max-height: 1000px;
}

.transition-wave {
    width: 100%;
    margin: 0px;
    display: block;
    min-height: 380px;
}

/* Progess bar inspired by this tutorial: https://gist.github.com/WeiChiaChang/abe92ca2e8da86ef69560b63903e8764*/
.progress-bar {
    background-color: var(--Dark-Light);
    border-radius: 4px;
    width: 100%;
}

.progress-bar-fill {
    background-color: var(--LMain);
    border-radius: 5px;
    display: block;
    height: 10px;
}

/* PROJECTS & EXPERIENCE SECTION */
#projects {
    background: var(--Background);
    color: var(--Dark);
    min-height: 2317px;
}

#project-caption {
    margin-left: 10px;
}

#projects-container {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: space-evenly;
    gap: var(--lgPad);
}

.project-card {
    position: relative;
    color: var(--Dark);
    display: grid;
    grid-template-rows: auto auto auto auto;
    grid-template-columns: 2fr 3fr auto;
    padding: var(--medPad);
    align-items: center;
    width: 100%;
    gap: var(--smallGap) var(--medPad);
    border-radius: var(--borderRadius);
    border: 1px solid transparent;
    opacity: 0;
    transition: all .7s;
}

.show-animate {
    opacity: 1;
}

.project-card:hover {
    transform: scale(1.02);
    border: 1px solid var(--LAccent2);
    box-shadow: 0px 3px 5px var(--LAccent);
    cursor: pointer;
}

.description-p {
    grid-row: 2;
    grid-column: 2/4;
    display: flex;
    justify-items: center;
    align-items: center;
    border-radius: var(--borderRadius);
    width: 100%;
    height: 100%;
    margin: 0px;
}

.project-card button {
    margin: 0px;
}

.read-more-button {
    grid-row: 1;
    grid-column: 3;
    width: 20px;
    align-self: start;
    justify-self: end;
    margin-top: 0px;
}

.live-button {
    grid-row: 3;
    grid-column: 2;
    width: fit-content;
    justify-self: start;
}

.skill-bubbles {
    display: flex;
    text-wrap: nowrap;
    overflow-x: auto;
    flex-direction: row;
    gap: var(--smallPad);
    grid-row: 4;
    grid-column: 2/4;
    margin-top: var(--smallGap);
    cursor: ew-resize;
}

.skill-bubbles::-webkit-scrollbar {
    height: 10px;
    width: 0px;
    scrollbar-width: 100%;
    scrollbar-base-color: var(--Light);
    -ms-overflow-style: none;
}

.skill-bubbles::-webkit-scrollbar-corner {
    height: 0px;
    scrollbar-width: 0%;
    scrollbar-base-color: transparent;
    -ms-overflow-style: none;
    display: none;
}

.skill-bubbles::-webkit-scrollbar-thumb {
    background-color: #00000000;
    transition: background-color 2s;
    -webkit-transition: background-color 2s;
    -moz-transition: background-color 2s;
}

.skill-bubbles:hover ::-webkit-scrollbar {
    background-color: var(--Dark);
    -ms-overflow-style: auto;
    display: block;
}

.skill-bubbles:hover::-webkit-scrollbar-thumb {
    height: 2px;
    border-radius: var(--borderRadius);
    background-color: #5b575789;
}

.project-img-icon {
    object-fit: cover;
    grid-row: 1/5;
    grid-column: 1;
    align-self: start;
    width: 100%;
    height: auto;
    margin: 0px;
    border-radius: var(--borderRadius);
}

.condensed-info {
    grid-row: 1;
    grid-column: 2;
    display: inline-block;
    align-self: start;
    overflow: hidden;
}

.condensed-info h3 {
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
}

/* RESUME SECTION */
#resume {
    background: var(--LAccent2);
    align-items: center;
    width: 100%;
    color: var(--BackgroundD);
    min-height: 870px;
}

#most-recent-resume {
    min-height: 50vh;
}

#resume-collection {
    display: grid;
    grid-template-columns: 1fr 1fr;
    justify-items: center;
    gap: var(--smallPad);
    margin: var(--medPad) 0px;
}

#resume-container {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 20px;
}

#download-link {
    justify-content: flex-end;
}

#resume-date {
    text-align: center;
}

/* CONTACT SECTION */
#contact {
    background-color: var(--BackgroundD);
    color: var(--Light);
    width: 100%;
    align-items: center;
    min-height: 100vh;
}

#contact .container-content {
    width: 50%;
}

#name-div, #email-div, #message-div {
    display: flex;
    flex-direction: column;
    gap: var(--smallGap);
    margin-top: var(--smallPad);
}

#contact-methods {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: var(--medPad);
    margin-top: var(--medPad);
    align-items: center;
    text-align: center;
}

.contact-icon {
    width: 8%;
    transition: .3s;
}

.contact-icon:hover {
    transform: scale(1.1);
}

#contact-button {
    color: var(--LAccent);
}

#contact-form {
    width: 70% !important; 
    height: 520px !important
}

